half-content-done

--- a/index.html
+++ b/index.html
@@ -41,8 +41,37 @@
 
         <div class="container bottom-section">
 
-            <ul>
+            <ul class="main">
+                <li class="ul-main">
+                    New Task
+                    <ul class="secondary">
+                        <li class="done editorial">
+                             Quarterly Newsletter 
+                        </li>
+                    </ul>
+                </li>
 
+                <li class="ul-main">Today
+                    <ul class="secondary">
+                        <li class="done editorial">
+                             Recruiting blog post
+                        </li>
+
+                        <li class="done q1goals">
+                            Mobile app launch
+                        </li>
+
+                        <li class="todo recruiting">
+                             Interview Jhon H.
+                        </li>
+
+                        <li class="done mobile">
+                             Submit update to mobile storefronts
+                        </li>
+                    </ul>
+                </li>
+                
+                <li class="ul-main">Upcoming</li>
             </ul>
 
         </div>
